--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
       {"inputs":[{"internalType":"uint256","name":"roundNum","type":"uint256"}],"name":"forceFinishExpiredMatches","outputs":[],"stateMutability":"nonpayable","type":"function"}
     ];
 
+    const participants = [
+      "LUMITERRA",
+      "KURU EXCHANGE",
+      "KIZZY MOBILE",
+      "CRYSTAL",
+      "CULT",
+      "aPriori",
+      "Magma",
+      "O.LAB"
+    ];
+
     async function connectWallet() {
       if (!window.ethereum) return alert("Please install MetaMask");
       provider = new ethers.providers.Web3Provider(window.ethereum);
@@ -71,12 +82,13 @@
 
     function renderBracketUI() {
       return `
+        <button onclick="connectWallet()" class='bg-blue-600 px-4 py-2 rounded mb-4'>Connect Wallet</button>
         <div class='grid grid-cols-4 gap-4 w-full'>
           <div class='flex flex-col justify-around'>
-            <div class='p-2 border rounded'>Player 1 <button class='ml-2 bg-blue-600 px-2 py-1 rounded'>Vote</button></div>
-            <div class='p-2 border rounded'>Player 2 <button class='ml-2 bg-blue-600 px-2 py-1 rounded'>Vote</button></div>
-            <div class='p-2 border rounded'>Player 3 <button class='ml-2 bg-blue-600 px-2 py-1 rounded'>Vote</button></div>
-            <div class='p-2 border rounded'>Player 4 <button class='ml-2 bg-blue-600 px-2 py-1 rounded'>Vote</button></div>
+            <div class='p-2 border rounded'>${participants[0]} <button class='ml-2 bg-blue-600 px-2 py-1 rounded'>Vote</button></div>
+            <div class='p-2 border rounded'>${participants[1]} <button class='ml-2 bg-blue-600 px-2 py-1 rounded'>Vote</button></div>
+            <div class='p-2 border rounded'>${participants[2]} <button class='ml-2 bg-blue-600 px-2 py-1 rounded'>Vote</button></div>
+            <div class='p-2 border rounded'>${participants[3]} <button class='ml-2 bg-blue-600 px-2 py-1 rounded'>Vote</button></div>
           </div>
           <div class='flex flex-col justify-around'>
             <div class='p-2 border rounded'>Winner QF1</div>
@@ -91,10 +103,10 @@
         </div>
         <div class='grid grid-cols-4 gap-4 w-full mt-8'>
           <div class='flex flex-col justify-around'>
-            <div class='p-2 border rounded'>Player 5 <button class='ml-2 bg-blue-600 px-2 py-1 rounded'>Vote</button></div>
-            <div class='p-2 border rounded'>Player 6 <button class='ml-2 bg-blue-600 px-2 py-1 rounded'>Vote</button></div>
-            <div class='p-2 border rounded'>Player 7 <button class='ml-2 bg-blue-600 px-2 py-1 rounded'>Vote</button></div>
-            <div class='p-2 border rounded'>Player 8 <button class='ml-2 bg-blue-600 px-2 py-1 rounded'>Vote</button></div>
+            <div class='p-2 border rounded'>${participants[4]} <button class='ml-2 bg-blue-600 px-2 py-1 rounded'>Vote</button></div>
+            <div class='p-2 border rounded'>${participants[5]} <button class='ml-2 bg-blue-600 px-2 py-1 rounded'>Vote</button></div>
+            <div class='p-2 border rounded'>${participants[6]} <button class='ml-2 bg-blue-600 px-2 py-1 rounded'>Vote</button></div>
+            <div class='p-2 border rounded'>${participants[7]} <button class='ml-2 bg-blue-600 px-2 py-1 rounded'>Vote</button></div>
           </div>
           <div class='flex flex-col justify-around'>
             <div class='p-2 border rounded'>Winner QF3</div>
