--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 
     async function startTournamentUI() {
       const round = prompt("Round number:");
-      const duration = prompt("Duration (seconds):");
+      const duration = 86400; // 24 hours in seconds
       try {
         const tx = await contract.startTournament(round, duration);
         await tx.wait();
-        alert("Tournament round started!");
+        alert("Tournament round started for 24 hours!");
       } catch (e) { alert("Error: " + e.message); }
     }
 
@@ -135,7 +135,7 @@
         }
         app.innerHTML = `
           <h2 class="text-2xl font-bold mb-4">⚙️ Admin Panel</h2>
-          <button onclick="startTournamentUI()" class="bg-green-600 px-4 py-2 rounded m-2">Start Tournament Round</button>
+          <button onclick="startTournamentUI()" class="bg-green-600 px-4 py-2 rounded m-2">Start Tournament Round (24h)</button>
           <button onclick="finishMatchUI()" class="bg-yellow-600 px-4 py-2 rounded m-2">Finish Match</button>
           <button onclick="forceFinishExpiredMatchesUI()" class="bg-red-600 px-4 py-2 rounded m-2">Force Finish Expired Matches</button>
         `;
