--- a/index.html
+++ b/index.html
@@ -655,21 +655,15 @@
                     <p>Current Round: ${currentRound} / ${totalRounds}</p>
                 `;
 
-                // Get tournament start time and show countdown
+                // Get tournament start time
                 if (state === 1) {
                     try {
                         tournamentStartTime = (await readContract.tournamentStartTime()).toNumber();
-                        // Calculate current round end time - rounds are 1-indexed in the contract
                         currentRoundEndTime = tournamentStartTime + (currentRound * ROUND_DURATION);
                         startCountdown();
                     } catch (error) {
-                        console.log('Tournament start time not available, using fallback countdown');
-                        // Fallback: show a generic countdown if start time is not available
-                        showFallbackCountdown();
+                        console.log('Tournament start time not available');
                     }
-                } else {
-                    // Hide countdown when tournament is not in progress
-                    document.getElementById('countdownTimer').style.display = 'none';
                 }
 
                 if (state === 1) { // Tournament in progress
@@ -682,16 +676,9 @@
                         </div>
                     `;
                     document.getElementById('countdownTimer').style.display = 'none';
-                } else if (state === 2) {
+                } else {
                     await loadBracket(readContract);
                     document.getElementById('countdownTimer').style.display = 'none';
-                    // Show tournament finished message
-                    const countdownElement = document.getElementById('countdownTimer');
-                    countdownElement.style.display = 'block';
-                    countdownElement.innerHTML = '🎉 Tournament has finished! Check the final results above.';
-                    countdownElement.style.background = 'rgba(76, 175, 80, 0.1)';
-                    countdownElement.style.borderColor = 'rgba(76, 175, 80, 0.3)';
-                    countdownElement.style.color = '#4CAF50';
                 }
 
             } catch (error) {
@@ -709,17 +696,13 @@
             const countdownElement = document.getElementById('countdownTimer');
             countdownElement.style.display = 'block';
 
-            function updateTimer() {
+            countdownInterval = setInterval(() => {
                 const now = Math.floor(Date.now() / 1000);
                 const timeLeft = currentRoundEndTime - now;
 
                 if (timeLeft <= 0) {
-                    countdownElement.innerHTML = '⏰ Current round has ended! Waiting for next round...';
+                    countdownElement.innerHTML = '⏰ Current round has ended!';
                     clearInterval(countdownInterval);
-                    // Try to reload tournament data to check for round progression
-                    setTimeout(() => {
-                        loadTournamentData();
-                    }, 5000);
                     return;
                 }
 
@@ -730,40 +713,10 @@
 
                 let timeString = '';
                 if (days > 0) timeString += `${days}d `;
-                if (hours > 0 || days > 0) timeString += `${hours.toString().padStart(2, '0')}:`;
-                timeString += `${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
+                timeString += `${hours.toString().padStart(2, '0')}:${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
 
                 countdownElement.innerHTML = `⏰ Current round ends in: ${timeString}`;
-            }
-
-            // Update immediately, then every second
-            updateTimer();
-            countdownInterval = setInterval(updateTimer, 1000);
-        }
-
-        function showFallbackCountdown() {
-            const countdownElement = document.getElementById('countdownTimer');
-            countdownElement.style.display = 'block';
-            countdownElement.innerHTML = '⏰ Tournament is active - Round timer loading...';
-            
-            // Try to get the start time again after a few seconds
-            setTimeout(async () => {
-                try {
-                    const readProvider = new ethers.providers.JsonRpcProvider(RPC_URL);
-                    const readContract = new ethers.Contract(CONTRACT_ADDRESS, CONTRACT_ABI, readProvider);
-                    const startTime = (await readContract.tournamentStartTime()).toNumber();
-                    
-                    if (startTime > 0) {
-                        tournamentStartTime = startTime;
-                        const tournamentState = await readContract.getTournamentState();
-                        const currentRound = tournamentState.round.toNumber();
-                        currentRoundEndTime = tournamentStartTime + (currentRound * ROUND_DURATION);
-                        startCountdown();
-                    }
-                } catch (error) {
-                    console.log('Still unable to get tournament start time');
-                }
-            }, 3000);
+            }, 1000);
         }
 
         // Smart refresh that only updates vote counts without rebuilding bracket
